# LAP_PersonalAssistant

./: .gitignore  README.md  agent_response.py  agent_state.py  client.py  general_secretary.py  main.py  main_assistant.py  main_business.py  myagent.py  orchestrator.py  pyproject.toml  server.py  set_env.sh  workflow.py
agents/: calendar_manager.py  finance_secretary.py  personal_team_lead.py  recube_secretary.py  recube_team_lead.py  youtrack_manager.py
agents/prompts/: flexible_calendar.txt  update_youtrack.txt
prompts/: calendar_manager_prompt.txt  flexible_calendar.txt  update_youtrack.txt  youtrack_manager_prompt.txt
tools/: base_tools.py  fastmcp_youtrack.py  gcalendar_tool.py  langchain_gcal.py  langchain_timer.py  langchain_youtrack.py  youtrack_tool.py
utils/: gcal_auth.py  gcal_get.py  gcal_set.py  youtrack_auth.py  youtrack_get.py  youtrack_set.py
